static/css/bootstrap-overruler.css
@font-face {
	font-family: "Bebas Neue";
	src: url('/static/fonts/BebasNeue.otf');
	font-weight: normal;
}

@font-face {
	font-family: "Museo Sans";
	src: url('/static/fonts/MuseoSans_500.otf');
	font-weight: normal;
}

@font-face {
	font-family: "Museo Sans";
	src: url('/static/fonts/MuseoSans_700.otf');
	font-weight: bold;
}

body {
	font-family: 'Museo Sans', sans-serif;
}

h1, h2, h3, h4, h5, h6 {
	font-family: 'Bebas Neue', sans-serif;
	font-weight: normal;
}

.navbar-brand h4 {
	display: inline;
	margin: 0;
	font-size: x-large;
	margin: 0;
}

.card-header {
	font-size: x-large;
}

.quiz-card .card-header {
	font-size: large;
}

.card-header h1, .card-header h2, .card-header h3, .card-header h4, .card-header h5, .card-header h6 {
	margin: 0;
}

.card-header .lh-lg {
	line-height: 1.25 !important;
}

.table.coalition-colored > :not(caption) > * > * {
	background-color: transparent !important;
}

.reactive-btn-success {
	background-color: #5cb85c !important;
	border-color: #4cae4c !important;
	color: #fff !important;
}

.reactive-btn-warning {
	background-color: #f0ad4e !important;
	border-color: #eea236 !important;
	color: #fff !important;
}

.reactive-btn-danger {
	background-color: #d9534f !important;
	border-color: #d43f3a !important;
	color: #fff !important;
}

#quiz-question {
	font-size: large;
}

#quiz-results-container {
	margin-left: 0 !important;
	margin-right: 0 !important;
	background: #000; /* for better darkening of non-selected coalitions by using opacity */
	overflow: hidden;
}

.quiz-result-coalition {
	display: block;
	position: relative;
	height: 360px;
	opacity: 0.5;
	user-select: none;
	box-shadow: none;
	transition: 0.075s ease-out;
}

.quiz-result-coalition-score-bg {
	display: block;
	position: absolute;
	bottom: 0;
	left: 0;
	width: 100%;
	height: 0%;
	background-color: rgba(255, 255, 255, 0.3);
	z-index: 1;
	transition: height 3s ease-out !important;
}

.quiz-result-coalition-content {
	display: inline-flex;
	flex-direction: column;
	justify-content: space-around;
	align-items: center;
	height: 100%;
	position: relative;
	z-index: 2;
}

.quiz-result-coalition-img {
	width: 100%;
	pointer-events: none; /* prevent dragging */
}

.quiz-result-coalition-name {
	word-break: break-all;
	font-size: xx-large;
}

.quiz-result-coalition:has(input[type=radio]:checked) {
	opacity: 1;
	/* add bloom effect */
	box-shadow: 0 0 6px rgba(255,255,255,0.4), 0 0 12px rgba(255,255,255,0.2), 0 0 18px rgba(255,255,255,0.05);
	transition: 0s;
}

.quiz-result-coalition.calculating {
	opacity: 1 !important;
	box-shadow: none !important;
}

#results tr > td > code,
#search-results tr > td > code {
	color: inherit !important;
}

.img-square {
	aspect-ratio: 1 / 1;
	object-fit: cover;
}

.coalition-cover {
	background-position: center center;
	background-size: cover;
	background-repeat: no-repeat;
	background-clip: border-box;
}

.user-picture {
	max-width: 100%;
	aspect-ratio: 1 / 1;
	object-fit: cover;
}

.mw-500 {
	max-width: 500px;
}

.mw-700 {
	max-width: 700px;
}

.mw-900 {
	max-width: 900px;
}

.list-group.noborder {
	border: none !important;
	border-radius: initial !important;
}

.list-group-numbered.custom-numbers,
.list-group-numbered.custom-number {
	counter-reset: item;
	list-style-type: none;
}
.list-group-numbered.custom-numbers li,
.list-group-numbered.custom-number li {
	display: block;
}
.list-group-numbered.custom-numbers li:before {
	content: counter(item) ". ";
	counter-increment: item;
	text-align: center;
}
.list-group-numbered.custom-number li:before {
	content: attr(data-number) ". ";
	text-align: center;
}

.list-group-item.big-coalition-row {
	display: flex !important;
	align-items: center;
	height: 180px;
	padding: 0;
	color: #fff;
	background-size: cover;
	background-position: center center;
	background-repeat: no-repeat;
}

.list-group-item.big-coalition-row::before {
	font-size: 2.5em;
	position: absolute;
	width: 64px;
}

.list-group-item.big-coalition-row > a {
	display: inherit;
	flex-basis: 100%;
	align-items: inherit;
	height: inherit;
	color: inherit;
	text-decoration: none !important;
	padding-left: 64px;
	box-shadow: inset 0 0 0 rgba(0,0,0,0.4), 0 0 0 rgba(0,0,0,0.2), 0 0 0 rgba(0,0,0,0.05);
	transition: 0.1s ease-out;
}

.list-group-item.big-coalition-row > a:hover,
.list-group-item.big-coalition-row > a:focus {
	box-shadow: inset 0 0 24px rgba(0,0,0,0.4), 0 0 48px rgba(0,0,0,0.2), 0 0 72px rgba(0,0,0,0.05);
	transition: 0.075s ease-out;
}

.big-coalition-logo {
	pointer-events: none; /* prevent dragging */
	height: 80%;
	padding: 0 16px;
}

.big-coalition-logo > img {
	height: 100%;
}

.big-coalition-content {

}

.big-coalition-content .coalition-name {
	letter-spacing: 1px;
	margin: 0;
}

.big-coalition-content > *:last-child {
	margin-bottom: 0px !important;
}

.progress.with-center-label {
	position: relative;
}

.progress .center-label {
	position: absolute;
	width: 100%;
	text-align: center;
	top: 50%;
	transform: translateY(-50%);
	color: rgba(255, 255, 255, 0.8);
}

.progress.extra-thick {
	height: 32px;
}

.login-page-bg {
	display: flex;
	flex-direction: row;
	flex-wrap: nowrap;
	justify-content: center;
	align-items: center;
	gap: 0px;
	min-height: 100vh;
}

.login-page-bg .coalition {
	height: 100vh;
	width: 100%;
	background-size: cover;
	background-repeat: no-repeat;
	background-position: center center;
}

.login-page-content {
	position: absolute;
	text-align: center;
	top: 50%;
	left: 50%;
	width: 90%;
	max-width: 400px;
	transform: translate(-50%, -50%);
	padding: 32px;
	background-color: rgba(0, 0, 0, 0.3);
	backdrop-filter: blur(8px);
	border-radius: 8px;
}

